# mynn

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindImGuiFileDialogVendor.cmake  FindImGuiVendor.cmake  FindImNodeFlowVendor.cmake  FindImPlot2DVendor.cmake  FindImPlot3DVendor.cmake  FindOnnxRuntimeVendor.cmake  FindOnnxVendor.cmake  FindProtobufVendor.cmake  FindSDL3Vendor.cmake  FindTorchVendor.cmake
src/: imgui_demo.cpp  imgui_demo_marker_hooks.cpp  imgui_demo_marker_hooks.h  main.cpp  node.h
src/model/: inspector.cpp  inspector.h  types.h
src/widget/menu/: nav.cpp  nav.h  top.cpp  top.h
src/widget/model_viewer/: node.h  viewer.cpp  viewer.h
